# drone_gazebo_Simulation_with_Vins_FUEL

./: .gitignore  .gitmodules  README.md  architecture.drawio  naming_rules.txt
VINS-Fusion-ROS2/: README.md
VINS-Fusion-ROS2/camera_models/src/calib/: CameraCalibration.cc
VINS-Fusion-ROS2/camera_models/src/camera_models/: Camera.cc  CataCamera.cc  CostFunctionFactory.cc  ScaramuzzaCamera.cc
VINS-Fusion-ROS2/config/gazebo_x500/: realsense_stereo_imu_config.yaml
VINS-Fusion-ROS2/loop_fusion/src/: pose_graph.h
VINS-Fusion-ROS2/vins/src/: KITTIOdomTest.cpp
drone_circle_pkg/: CMakeLists.txt  launch_drone_circle.sh  singleHouseWorld.sdf
drone_circle_pkg/src/: drone_circle_node.cpp
fuel/active_perception/src/: frontier_finder.cpp
fuel/bspline_opt/: CMakeLists.txt
fuel/bspline_opt/include/bspline_opt/: bspline_optimizer.h
fuel/exploration_manager/: CMakeLists.txt
fuel/exploration_manager/launch/: exploration_combined_2.launch.py  simulator.xml
fuel/exploration_manager/src/: exploration_node.cpp  fast_exploration_manager.cpp  fuel_nav.cpp
fuel/path_searching/: CMakeLists.txt
fuel/path_searching/include/path_searching/: astar2.h  graph_search.hpp  kinodynamic_astar.h
fuel/plan_env/src/: map_ros.cpp  obj_generator.cpp  obj_predictor.cpp
fuel/plan_manage/: package.xml
fuel/plan_manage/include/plan_manage/: planner_manager.h
fuel/plan_manage/src/: planner_manager.cpp
fuel/poly_traj/: CMakeLists.txt
fuel/poly_traj/src/: traj_generator.cpp
fuel/traj_utils/: package.xml
fuel/traj_utils/src/: planning_visualization.cpp
fuel/utils/waypoint_generator/: package.xml
log/: latest_build
px4_odometry_converter/: CMakeLists.txt
src/: README.md
src/VINS-Fusion-ROS2/vins/: CMakeLists.txt
src/drone_circle_pkg/: README.md  launch_drone_circle.sh  package.xml
src/drone_circle_pkg/src/: drone_circle_node.cpp
src/fuel/bspline/: CMakeLists.txt
src/fuel/controller/: CMakeLists.txt  controller_structure.drawio  package.xml
src/fuel/controller/example/: CMakeLists.txt  controller_example.cpp
src/fuel/controller/implement/: CMakeLists.txt
src/fuel/controller/implement/include/: lqr.h  mpc.h
src/fuel/controller/implement/src/: lqr.cpp  mpc.cpp
src/fuel/controller/interface/: CMakeLists.txt
src/fuel/controller/interface/include/controller/: controller_api.h
src/fuel/controller/interface/src/: controller_api.cpp
src/fuel/controller_manager/: CMakeLists.txt  controller_manager_structure.drawio  package.xml
src/fuel/controller_manager/example/: CMakeLists.txt  controller_manager_example.cpp
src/fuel/controller_manager/implement/: CMakeLists.txt
src/fuel/controller_manager/implement/include/: controller_manager.h  controller_manager_types.h
src/fuel/controller_manager/implement/src/: controller_manager.cpp
src/fuel/controller_manager/interface/: CMakeLists.txt  controller_manager_main.cpp
src/fuel/controller_manager/interface/include/controller_manager/: service_manager.h  topic_manager.h
src/fuel/controller_manager/interface/src/: service_manager.cpp  topic_manager.cpp
src/fuel/dynamic_safety_margin/: CMakeLists.txt  package.xml
src/fuel/dynamic_safety_margin/example/: CMakeLists.txt  dsm_example.cpp
src/fuel/dynamic_safety_margin/implement/: CMakeLists.txt
src/fuel/dynamic_safety_margin/implement/include/: dsm.h
src/fuel/dynamic_safety_margin/implement/src/: dsm.cpp
src/fuel/dynamic_safety_margin/interface/: CMakeLists.txt
src/fuel/dynamic_safety_margin/interface/include/dsm/: dsm_api.h
src/fuel/dynamic_safety_margin/interface/src/: dsm_api.cpp
src/fuel/governor/: CMakeLists.txt  governor_structure.drawio  package.xml
src/fuel/governor/example/: CMakeLists.txt  governor_example.cpp
src/fuel/governor/implement/: CMakeLists.txt
src/fuel/governor/implement/include/: erg.h  pathfg.h
src/fuel/governor/implement/src/: erg.cpp  pathfg.cpp
src/fuel/governor/interface/: CMakeLists.txt
src/fuel/governor/interface/include/governor/: governor_api.h
src/fuel/governor/interface/src/: governor_api.cpp
src/fuel/path_planner/: CMakeLists.txt  package.xml  path_planner_workflow.drawio
src/fuel/path_planner/example/: CMakeLists.txt  path_planner_example.cpp
src/fuel/path_planner/implement/: CMakeLists.txt
src/fuel/path_planner/implement/include/: astar2.h  kinodynamic_astar.h  path_planner_types.h  rrtstar.h  topo_prm.h
src/fuel/path_planner/implement/src/: astar2.cpp  kinodynamic_astar.cpp  rrtstar.cpp  topo_prm.cpp
src/fuel/path_planner/interface/: CMakeLists.txt
src/fuel/path_planner/interface/include/path_planner/: path_planner_api.h
src/fuel/path_planner/interface/src/: path_planner_api.cpp
src/fuel/plan_env/: CMakeLists.txt  package.xml
src/fuel/plan_env/include/plan_env/: map_ros.h  obj_predictor.h  raycast.h
src/fuel/plan_env/src/: edt_environment.cpp  map_ros.cpp  obj_generator.cpp  obj_predictor.cpp  raycast.cpp  sdf_map.cpp
src/fuel/poly_traj/: package.xml
src/fuel/quadrotor_msgs/: CMakeLists.txt  package.xml
src/fuel/quadrotor_msgs/include/quadrotor_msgs/: decode_msgs.h
src/fuel/src/active_perception/: CMakeLists.txt  package.xml
src/fuel/src/active_perception/include/active_perception/: frontier_finder.h  heading_planner.h  perception_utils.h  traj_visibility.h
src/fuel/src/active_perception/src/: frontier_finder.cpp  heading_planner.cpp  perception_utils.cpp  traj_visibility.cpp
src/fuel/src/bspline/: CMakeLists.txt  package.xml
src/fuel/src/bspline/include/bspline/: non_uniform_bspline.h
src/fuel/src/bspline/msg/: NextPosAndYaw.msg
src/fuel/src/bspline/src/: non_uniform_bspline.cpp  non_uniform_bspline_mod.cpp
src/fuel/traj_utils/: CMakeLists.txt
src/fuel/traj_utils/src/: planning_visualization.cpp  process_msg.cpp
src/fuel/utilities/: CMakeLists.txt  package.xml  utilities_structure.drawio
src/fuel/utilities/include/utilities/: common_types.h  init.yaml  yaml_loader.h
src/fuel/utilities/src/: yaml_loader.cpp
src/px4_odometry_converter/: CMakeLists.txt  package.xml
src/px4_odometry_converter/src/: odom_converter_node.cpp
(+299 files in other folders)
