<?xml version="1.0"?>
<package format="3">
  <name>plan_manage</name>
  <version>0.0.0</version>
  <description>The fast_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jane.doe@example.com">jane.doe</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>poly_traj</depend>
    <depend>plan_env</depend>
    <depend>path_searching</depend>
    <depend>bspline</depend>
    <depend>bspline_opt</depend>
    <depend>active_perception</depend>
    <depend>traj_utils</depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>quadrotor_msgs</depend>

    <export>
      <build_type>ament_cmake</build_type>
    </export>

</package>
