<?xml version="1.0"?>
<package format="3">
  <name>px4_odometry_converter</name>
  <version>0.0.1</version>
  <description>Convert px4_msgs/VehicleOdometry to nav_msgs/Odometry</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>