<?xml version="1.0"?>
<package format="3">
  <name>controller</name>
  <version>0.0.0</version>
  <description>The controller package</description>

  <maintainer email="szhang.bc@gmail.com">ShuZ</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>eigen</depend>
  <depend>plan_env</depend>
  <depend>path_planner</depend>
  <depend>governor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
