<?xml version="1.0"?>
<package format="3">
  <name>governor</name>
  <version>0.0.0</version>
  <description>The governor package</description>
  <maintainer email="szhang.bc@gmail.com">SZhang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>utilities</depend>
  <depend>dsm</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>